# enzyme-proto

./: .clang-format  .gitignore  LICENSE  README.md  nh-ratel-test.c  run.txt
archive/: test0.cpp  test00.cu  zygote-grad-example.ipynb
docs/: constant_fwd.c  constant_rev.c  scalar_rev.c
examples/: clean.sh  test001.c  test003.cu  test004.cpp  test005.cpp  test007.c  test008.c  test009.c  test010.c  test011.c  test1.c  test2.cpp  test3.cu
extras/: Makefile  matrix_derivatives.c  newton_enz.c  newton_nd.c  nh-ad.c  split.c  sym_matrix.c
libCEED-ad/: c-voigt.c  enzyme-example.ipynb  enzyme-velocity-gradient-more.ipynb  enzyme-velocity-gradient.ipynb  julia-voigt-enzyme.ipynb  julia-voigt.ipynb
libceed-enzyme/: Enzyme-Solids-Stability.ipynb  Makefile  enzyme-vec-mul.ipynb  enzyme-velocity-gradient-more.ipynb  julia-voigt-enzyme.ipynb  julia-voigt.ipynb  nh-km-ad-fwd.c  nh-ratel-test.c  ratel-nh-initial-stress.c  solids-enzyme-fwdsplit.c  solids-enzyme-split.c  solids-enzyme.c  stable-numerics-nh-demo.ipynb  voigt-enzyme.c  voigt.c
llvm/: hello.c
nh-current/: Makefile
protos/: Makefile  enzyme-vec-add.ipynb  julia-voigt-enzyme.ipynb  julia-voigt-zygote.ipynb  nh-ad-fwd.c  nh-ad-rev.c  nh-km-ad-fwd.c  ratel-nh-initial-full.c  ratel-nh-initial-fwddiff.c  ratel-nh-initial-shorter.c  ratel-nh-initial-stress.c  ratel-nh-initial.h  return_map_exponential.jl  return_map_exponential.m  solids-enzyme-fwdsplit-full.c  solids-enzyme-fwdsplit.c  solids.c  stable-numerics-nh-demo.ipynb
tests/: Makefile  run.txt  test001.c  test006.c  (+27 more)
tests/adolc/test003/: CMakeLists.txt
(+94 files in other folders)
